--- a/SaborBrasil/wwwroot/index.html
+++ b/SaborBrasil/wwwroot/index.html
@@ -70,6 +70,7 @@
         flex-direction: column;
         transition: transform 0.15s;
         margin-bottom: 2rem;
+        height: 100%; /* NOVO: faz o card ocupar toda a altura do grid */
       }
       .dish-card:hover {
         transform: translateY(-6px) scale(1.01);
@@ -83,9 +84,10 @@
       }
       .dish-content {
         padding: 1.5rem;
-        flex: 1;
+        flex: 1 1 auto;
         display: flex;
         flex-direction: column;
+        height: 100%;
       }
       .dish-title {
         font-size: 1.4rem;
@@ -102,11 +104,14 @@
         margin-bottom: 1.2rem;
         color: var(--text-color);
         font-size: 1.08rem;
+        flex: 0 0 auto;
       }
       .dish-actions {
         display: flex;
         gap: 18px;
-        margin-bottom: 1.2rem;
+        margin-top: auto;      /* NOVO: empurra os botões para o final do card */
+        margin-bottom: 0;      /* Remove o margin-bottom antigo */
+        align-items: flex-end; /* Garante alinhamento na base */
       }
       .action-btn {
         background: var(--light-gray);
