--- a/SaborBrasil/wwwroot/Cadastro de Produto.html
+++ b/SaborBrasil/wwwroot/Cadastro de Produto.html
@@ -191,39 +191,34 @@
       });
 
       // Envio do formulário
-      postForm.addEventListener("submit", async function (e) {
-        e.preventDefault();
+      document.getElementById("post-form").addEventListener("submit", async function (e) {
+  e.preventDefault();
 
-        const formData = new FormData(postForm);
-        formData.append("UsuarioId", localStorage.getItem("userId"));
+  if (!localStorage.getItem("userId")) {
+    alert("Você precisa estar logado para cadastrar um produto.");
+    window.location.href = "/login.html";
+    return;
+  }
 
-        try {
-          const response = await fetch("/api/publicacoes/Criarpublicacao", {
-            method: "POST",
-            body: formData,
-            headers: {
-              Authorization: `Bearer ${localStorage.getItem("token")}`, // Token do usuário logado
-            },
-          });
+  const formData = new FormData(this);
+  formData.append("UsuarioId", Number(localStorage.getItem("userId")));
 
-          if (response.ok) {
-            showAlert("Publicação cadastrada com sucesso!", "success");
-            postForm.reset();
-            imagePreview.style.display = "none";
-            setTimeout(() => {
-              window.location.href = "/index.html";
-            }, 1000); // Aguarda 1 segundo para mostrar o alerta antes
-          } else {
-            const errorData = await response.json();
-            showAlert(
-              errorData.message || "Erro ao cadastrar publicação.",
-              "error"
-            );
-          }
-        } catch (error) {
-          showAlert("Erro ao cadastrar publicação: " + error.message, "error");
-        }
-      });
+  try {
+    const response = await fetch("/api/publicacoes/Criarpublicacao", {
+      method: "POST",
+      body: formData,
+    });
+
+    if (response.ok) {
+      window.location.href = "/index.html";
+    } else {
+      const errorData = await response.json();
+      alert(errorData.message || "Erro ao cadastrar publicação.");
+    }
+  } catch (error) {
+    alert("Erro ao cadastrar publicação: " + error.message);
+  }
+});
 
       // Função para mostrar alertas
       function showAlert(message, type) {
