--- a/SaborBrasil/wwwroot/login.html
+++ b/SaborBrasil/wwwroot/login.html
@@ -134,6 +134,7 @@
             text-decoration: underline;
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
     <div class="login-container">
@@ -148,9 +149,12 @@
                 <input type="email" id="Email" name="Email" class="form-control" required>
             </div>
             
-            <div class="form-group">
+            <div class="form-group" style="position: relative;">
                 <label for="Senha">Senha</label>
-                <input type="password" id="Senha" name="Senha" class="form-control" required>
+                <input type="password" id="Senha" name="Senha" class="form-control" required style="padding-right: 38px;">
+                <span id="toggleSenhaLogin" style="position:absolute; right:12px; top:38px; cursor:pointer; color:#888; font-size:1.2rem;">
+                    <i class="fa-regular fa-eye" id="login-eye"></i>
+                </span>
             </div>
             
             <button type="submit" class="btn btn-primary">Entrar</button>
@@ -218,6 +222,20 @@
                 messageDiv.textContent = 'Erro ao conectar com o servidor';
                 messageDiv.className = 'alert alert-error';
                 messageDiv.style.display = 'block';
+            }
+        });
+
+        document.getElementById('toggleSenhaLogin').addEventListener('click', function() {
+            const senhaInput = document.getElementById('Senha');
+            const eyeIcon = document.getElementById('login-eye');
+            if (senhaInput.type === "password") {
+                senhaInput.type = "text";
+                eyeIcon.classList.remove('fa-eye');
+                eyeIcon.classList.add('fa-eye-slash');
+            } else {
+                senhaInput.type = "password";
+                eyeIcon.classList.remove('fa-eye-slash');
+                eyeIcon.classList.add('fa-eye');
             }
         });
     </script>
