alterando rota login.html

--- a/SaborBrasil/wwwroot/login.html
+++ b/SaborBrasil/wwwroot/login.html
@@ -176,7 +176,7 @@
             messageDiv.style.display = 'none';
             
             try {
-                const response = await fetch('http://localhost:5172/Usuario/Login', { // Ajuste a porta se necessário
+                const response = await fetch('http://10.50.11.55:5172/Usuario/Login', { // Ajuste a porta se necessário
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
